// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a text children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <span
    className="sc-bdVaJa lbJuWU"
  >
    This is a text
  </span>
</span>
`;

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <span
    className="sc-bdVaJa lbJuWU"
  >
    <div />
  </span>
</span>
`;
